Fixed some sizes for types on smaller screens to look better

--- a/src/app/styles/_type.sass
+++ b/src/app/styles/_type.sass
@@ -140,7 +140,7 @@ sub.side-decoration
 
   @media (min-width: $tablet-min) and (max-width: $desktop-min)
     font-family: var(--font-montreal-book, "PP Neue Montreal"), "Arial", "sans-serif"
-    font-size: 4vw
+    font-size: 6vw
     font-style: normal
     font-weight: 400
     line-height: 130%
@@ -149,7 +149,7 @@ sub.side-decoration
 
   @media (min-width: $phone-min) and (max-width: $tablet-min)
     font-family: var(--font-montreal-book, "PP Neue Montreal"), "Arial", "sans-serif"
-    font-size: 4vw
+    font-size: 8vw
     font-style: normal
     font-weight: 400
     line-height: 130%
@@ -178,7 +178,7 @@ sub.side-decoration
 
   @media (min-width: $phone-min) and (max-width: $tablet-min)
     font-family: var(--font-montreal-medium, "PP Neue Montreal"), "Arial", "sans-serif"
-    font-size: 4vw
+    font-size: 8vw
     font-style: normal
     font-weight: 500
     line-height: normal
